# enstrect

./: README.md  pyproject.toml  requirements.txt
src/enstrect/: clustering.py  contraction.py  extraction_old.py  run.py  run_all.py  run_all_crackensembles.py  semantic_mapper.py  semantic_mapping.py
src/enstrect/datasets/: download.py  multiview.py  utils.py
src/enstrect/evaluation/: metrics.py  run.py
src/enstrect/evaluation/utils/: linemesh.py  lines.py
src/enstrect/extraction/: boundary.py  clustering.py  contraction.py  utils.py
src/enstrect/mapping/: fuser.py  mapper.py
src/enstrect/segmentation/: base.py  detectionhma_model.py  nnunet_s2ds.py  omnicrack30k_model.py  segmentation.py
